RESOLVED FIXED184243
We should not trash the stack pointer on OSR entry.
https://bugs.webkit.org/show_bug.cgi?id=184243
Summary We should not trash the stack pointer on OSR entry.
Mark Lam
Reported 2018-04-02 12:22:42 PDT
Patch coming.
Attachments
proposed patch. (2.96 KB, patch)
2018-04-02 12:31 PDT, Mark Lam
fpizlo: review+
Radar WebKit Bug Importer
Comment 1 2018-04-02 12:23:27 PDT
Mark Lam
Comment 2 2018-04-02 12:31:54 PDT
Created attachment 337012 [details] proposed patch.
Mark Lam
Comment 3 2018-04-02 13:08:22 PDT
Thanks for the review. Landed in r230175: <http://trac.webkit.org/r230175>.
Note You need to log in before you can comment on or make changes to this bug.